--- a/gowild-demo.html
+++ b/gowild-demo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GoWild AI Marketing Engine - Comprehensive Demo</title>
+  <title>GoWild AI Demo</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
