--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GoWild AI Demo</title>
-
+  
+  <!-- Load Tailwind CSS from CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <style>
+    /* Use Inter font */
+    html { font-family: 'Inter', sans-serif; }
+  </style>
 </head>
 <body>
   <div id="root"></div>
-
-  <!-- Link to external JavaScript file -->
-  <script type="text/babel" src="./gowild-chinese.js"></script>
+  
+  <!-- CORRECT SCRIPT PATH: Now that index.html is in the root, /src/index.js works perfectly. -->
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
